welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {


def vuBiscuit():Boolean = {
var x: Int=0;
for(x<-1 to 6){avance();if (estSurBiscuit){return true;}}
for(x<-1 to 6){recule();}
}
if (vuBiscuit==true){return true;}else{return false;}
}